<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stress Reducing Quotations</string>
    <string name="about_title"><b><u>About The App</u></b></string>
    <string name="action_settings">Settings</string>
    
    <string name="forward"><b>Proceed Forward</b></string>
    <string name="exit"><b>Close Application</b></string>
    <string name="about_app"><i>Welcome Viewers! This App is Featuring 
        Cites and Quotations of the Greatest Philosophers, Scientists, Leaders, Warriors, Ethicists,
        Public Intellectuals and Popular Figures Regarding Stress Management.</i></string>
 
    <string name="next1"><b>Next</b></string>
    <string name="back1"><b>Share</b></string>
    <string name="home"><b>Home</b></string>
    
    <string name="app_id">754056248095025</string>


</resources>
