<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08253c"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appmasters.stressquotations.StressActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:text="@string/about_app"
        android:textColor="#A7EEEF"
        android:textSize="22dp"
        android:layout_gravity="center"
        android:textStyle="italic" />

    <Button
        android:id="@+id/forward"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/exit"
        android:text="@string/forward"
        android:textSize="20dp"
        android:textColor="#FCF005"
        android:padding="2dp"
        android:background="@color/com_facebook_blue" />

    <Button
        android:id="@+id/exit"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="74dp"
        android:text="@string/exit"
        android:textColor="#FCF005"
        android:textSize="20dp"
        android:padding="2dp" 
        android:background="@color/com_facebook_blue" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="49dp"
        android:text="@string/about_title"
        android:textColor="#FCF005"
        android:textSize="24dp"
        android:textStyle="bold" />

</RelativeLayout>