<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.appmasters.stressquot.quot1" >

    <ImageView
        android:id="@+id/quot1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view_patients"
        android:layout_marginBottom="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/quot5" />

    <Button
        android:id="@+id/home"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFF"
        android:text="@string/home" 
        android:background="@color/com_facebook_blue" />

    <Button
        android:id="@+id/back5"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:textColor="#FFFF"
        android:layout_alignLeft="@+id/quot1"
        android:layout_alignParentBottom="true"
        android:text="@string/back1" 
        android:background="@color/com_facebook_blue" />

    <Button
        android:id="@+id/next5"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/next1"
        android:textColor="#FFFF" 
        android:background="@color/com_facebook_blue" />

</RelativeLayout>



    

